--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "start": "npx cds run"
   },
   "cds": {
+    "hana": {
+      "deploy-format": "hdbtable"
+    },
     "requires": {
       "db": {
         "kind": "sqlite",
